--- a/calculadora.html
+++ b/calculadora.html
@@ -4,15 +4,22 @@
     <title>Calculator</title>
     <meta charset="utf-8" />
     <script type="text/javascript">
-      function cube(){
+      function cubo(){
         var num = document.getElementById("n1");
         num.value = Math.pow(num.value, 3);
+      }
+      function cuarta(){
+        var num = document.getElementById("n1");
+        num.value = Math.pow(num.value, 4);
       }
     </script>
   </head>
   <body>
     <H1>Calculadora de Jaime Franco Sánchez</H1>
     <p>Numero: <input type="text" id="n1"></p>
-    <p><button onclick="cube()">x^3</p>
+    <p>
+      <button onclick="cubo()">x^3</button>
+      <button onclick="cuarta()">x^4</button>
+    </p>
   </body>
 </html>
